--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -9,6 +9,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Uus sõnum</string>
   <!--AlbumThumbnailView-->
+  <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Hetkel: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Sa pole veel salaväljendit määranud!</string>
@@ -70,10 +71,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Sissetulev kõne</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Kaamera pole saadaval.</string>
+  <string name="CameraActivity_image_save_failure">Pildi salvestamine ebaõnnestus.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eemalda</string>
   <string name="ClearProfileActivity_remove_profile_photo">Eemaldad profiilipildi?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Veebibrauserit ei leitud.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Sinu turvanumber kontaktiga %1$s on muutunud. See võib tähendada, et keegi proovib sinu vestlusesse sekkuda või et %2$s lihtsalt taasinstallis Signali.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Sa võid tahta kinnitada oma turvanumbrit selle kontaktiga.</string>
@@ -108,7 +112,7 @@
   <string name="ConversationItem_unable_to_open_media">Ei leia rakendust, mis oleks võimeline seda meediafaili avama.</string>
   <string name="ConversationItem_copied_text">%s kopeeritud</string>
   <string name="ConversationItem_from_s">%s kaudu</string>
-  <string name="ConversationItem_to_s">kaardile %s</string>
+  <string name="ConversationItem_to_s">SIMile %s</string>
   <!--ConversationActivity-->
   <string name="ConversationActivity_reset_secure_session_question">Lähtesta turvaline sessioon?</string>
   <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">See võib aidata, kui sul on selles vestluses krüptimisprobleemid. Sinu sõnumid jäävad alles.</string>
@@ -134,6 +138,7 @@
   <string name="ConversationActivity_error_leaving_group">Grupist lahkumisel tekkis viga</string>
   <string name="ConversationActivity_specify_recipient">Palun vali kontakt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Eemaldada kontakti blokeering?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Eemaldad grupi blokeeringu?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Sa saad uuesti vastu võtta sõnumeid ja kõnesid sellelt kontaktilt.</string>
   <string name="ConversationActivity_unblock_this_group_description">Grupi liikmetel on võimalik sind uuesti gruppi lisada.</string>
   <string name="ConversationActivity_unblock">Eemalda blokeering</string>
@@ -269,9 +274,15 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Oled valmis oma lähivõtteks?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nüüd sa saad Signalis sõpradega jagada profiilipilti ja -nime</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signali profiilid on kohal</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Tutvustame kirjutamisindikaatoreid.</string>
   <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Nüüd on võimalik näha ja näidata, et sõnumeid sisestatakse.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Kas soovid need kohe lubada?</string>
+  <string name="ExperienceUpgradeActivity_typing_ui_title">Kirjutamisindikaatorid on kohal</string>
+  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Luba kirjutamisindikaatorid</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Lülita kirjutamisindikaatorid sisse</string>
   <string name="ExperienceUpgradeActivity_no_thanks">Tänan, ei</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Sõnumi vastuvõtmine...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Püsiv Signali ühendusviga!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal ei saanud registreerida teenusega Google Play Services. Signali sõnumid ja kõned on keelatud, palun proovi taas-registreerida menüüs Seaded &gt; Täpsem.</string>
@@ -324,6 +335,7 @@
   <string name="InviteActivity_no_app_to_share_to">Tundub, et sul pole ühtegi rakendust, kuhu jagada.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Sõbrad ei luba sõpradel krüptimata rääkida.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Taustal töötamine...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Saatmine ebaõnnestus</string>
   <string name="MessageDetailsRecipient_new_safety_number">Uus turvanumber</string>
@@ -417,6 +429,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services versioon, mis sul on installitud, ei toimi korrektselt. Palun taasinstalli Google Play Services ja proovi uuesti.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Sõnumi vastuvõtmine...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Hinda seda rakendust</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Kui sa naudid selle rakenduse kasutamist, palun võta aega ja hinda seda, et meid aidata.</string>
@@ -427,10 +440,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokeerid selle kontakti?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Sa ei saa sellelt kontaktilt enam sõnumeid ja kõnesid vastu võtta.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Blokeerid ja lahkud sellest grupist?</string>
+  <string name="RecipientPreferenceActivity_block_group">Blokeerid selle grupi?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Sa ei saa sellest grupist rohkem sõnumeid ja uuendusi.</string>
   <string name="RecipientPreferenceActivity_block">Blokeeri</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Eemaldada kontakti blokeering?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Sa saad uuesti sellelt kontaktilt sõnumeid ja kõnesid vastu võtta.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Eemaldad grupi blokeeringu?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Grupi liikmetel on võimalik sind uuesti gruppi lisada.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Grupist lahkumisel tekkis viga</string>
   <string name="RecipientPreferenceActivity_unblock">Eemalda blokeering</string>
@@ -475,6 +491,10 @@
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal vajab sinu kontaktidele ja meediale ligipääsu, et ühenduda sõpradega, vahetada sõnumeid ja teha turvalisi kõnesid</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Teenusega ei saanud ühendust. Palun kontrolli võrguühendust ja proovi uuesti.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Et sinu telefoninumbrit lihtsalt kinnitada, võib Signal automaatselt tuvastada sinu kinnituskoodi, kui lubad sellel vaadata SMS-sõnumeid.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Sa oled silumislogi saatmisest %d sammu kaugusel.</item>
+    <item quantity="other">Sa oled silumislogi saatmisest %d sammu kaugusel.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Pildi muutuste salvestamine ebaõnnestus</string>
   <!--Search-->
@@ -483,6 +503,7 @@
   <string name="SearchFragment_header_contacts">Kontaktid</string>
   <string name="SearchFragment_header_messages">Sõnumid</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">Sõnumi saatmine...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Lisa kontaktidesse</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Kutsu Signalisse</string>
@@ -608,6 +629,7 @@
   <string name="QuickResponseService_problem_sending_message">Sõnumi saatmisel esines probleem!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Salvestatud kohta %s</string>
+  <string name="SaveAttachmentTask_saved">Salvestatud</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Otsi</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Otsi vestlusi, kontakte ja sõnumeid</string>
@@ -617,6 +639,10 @@
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Uus sõnum</string>
   <!--TransferControlView-->
+  <plurals name="TransferControlView_n_items">
+    <item quantity="one">%d üksus</item>
+    <item quantity="other">%d üksust</item>
+  </plurals>
   <!--UnauthorizedReminder-->
   <string name="UnauthorizedReminder_device_no_longer_registered">Seade ei ole enam registreeritud</string>
   <string name="UnauthorizedReminder_this_is_likely_because_you_registered_your_phone_number_with_Signal_on_a_different_device">Tõenäoliselt seepärast, et sa registreerisid oma telefoninumbri Signalis erinevas seadmes. Klõpsa uuesti registreerimiseks.</string>
@@ -672,7 +698,7 @@
   <string name="conversation_activity__type_message_push">Signali sõnum</string>
   <string name="conversation_activity__type_message_sms_insecure">Turvamata SMS</string>
   <string name="conversation_activity__type_message_mms_insecure">Turvamata MMS</string>
-  <string name="conversation_activity__from_sim_name">Kontaktilt %1$s</string>
+  <string name="conversation_activity__from_sim_name">SIMilt %1$s</string>
   <string name="conversation_activity__send">Saada</string>
   <string name="conversation_activity__compose_description">Sõnumi koostamine</string>
   <string name="conversation_activity__emoji_toggle_description">Lülita emoji klaviatuuri</string>
@@ -994,6 +1020,8 @@
   <string name="preferences__incognito_keyboard">Inkognito klaviatuur</string>
   <string name="preferences__read_receipts">Lugemiskinnitused</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Kui lugemiskinnitused on keelatud, siis pole sul võimalik teiste saadetud lugemiskinnitusi näha.</string>
+  <string name="preferences__typing_indicators">Kirjutamisindikaatorid</string>
+  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Kui kirjutamisindikaatorid on keelatud, ei näe sa neid ka teiste puhul.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Palu klaviatuuril keelata isikupärastatud õppimine</string>
   <string name="preferences_app_protection__blocked_contacts">Blokeeritud kontaktid</string>
   <string name="preferences_chats__when_using_mobile_data">Kui kasutad mobiilandmesidet</string>
@@ -1020,7 +1048,11 @@
   <string name="preferences_events__contact_joined_signal">Kontakt liitus Signaliga</string>
   <string name="preferences_notifications__priority">Prioriteet</string>
   <string name="preferences_communication__category_sealed_sender">Kaetud saatja</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Kuva indikaatoreid</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Kuva olekuikooni, kui vajutad valikule \"Sõnumi andmed\" sõnumitel, mis saadeti kaetud saatja abil.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Luba kõigilt</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Luba kaetud saatja sissetulevate sõnumite juures mitte-kontaktidelt ja isikutelt, kellega sa pole enda profiili jaganud.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Rohkem infot</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1152,6 +1184,7 @@
   <string name="preferences_chats__create_backup">Loo varundus</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Sisesta varunduse salaväljend</string>
   <string name="RegistrationActivity_restore">Taasta</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Uuematest Signali versioonidest ei saa varundusi importida</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Vale varunduse salaväljend</string>
   <string name="RegistrationActivity_checking">Kontrollin...</string>
   <string name="RegistrationActivity_d_messages_so_far">Siiani leidsime %d sõnumit...</string>
